@@ -33,6 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Import snooze information from iCalendar alarms.
+* [jan] Import iCalendar 2.0 alarms.
 * [jan] Import and export recurrence rules to iCalendar.
 * [jan] Return ETags with browse() API method.
  </notes>
@@ -1603,6 +1605,8 @@
    <date>2014-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Import snooze information from iCalendar alarms.
+* [jan] Import iCalendar 2.0 alarms.
 * [jan] Import and export recurrence rules to iCalendar.
 * [jan] Return ETags with browse() API method.
    </notes>
